[package]
name = "crypto"
description = "This crate implements the RPCh Crypto protocol as defined by the specs in the parent repository. The implementation is WASM compatible and also exposes a TypeScript API via wasm-bindgen."
version = "0.3.3"
license = "LGPL-3.0"
repository = "https://github.com/rpc-h/crypto"
authors = ["HOPR Association <tech@hoprnet.org>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
timestamps = ["js-sys"]
default = ["console_error_panic_hook", "timestamps"]

[dependencies]
blake2 = "0.10.5"
chacha20poly1305 = "0.10.1"
elliptic-curve = "0.12.3"
getrandom = { version = "0.2.8", features = ["js"] }
js-sys = { version = "0.3.60", optional = true }
k256 = { version = "0.11.6", features = ["arithmetic", "ecdh"] }
hex = "0.4.3"
hkdf = "0.12.3"
thiserror = "1.0.37"
wasm-bindgen = "0.2.83"
console_error_panic_hook = { version = "0.1.6", optional = true }
#wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.30"
hex = "0.4.3"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
