[package]
name = "rpch-crypto"
version = "0.1.0"
authors = ["HOPR Association <tech@hoprnet.org>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.83"
elliptic-curve = "0.12.3"
getrandom = { version = "0.2.8", features = ["js"] }
k256 = { version = "0.11.6", features = ["arithmetic", "ecdh"] }
hex = "0.4.3"

console_error_panic_hook = { version = "0.1.6", optional = true }
#wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.30"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
